finished implementing algo, fixing drawing issue