@@ -1,5 +1,7 @@
 package org.caleydo.view.dynamicpathway.ui;
 
+import java.util.ArrayList;
+
 import gleem.linalg.Vec2f;
 
 import org.caleydo.core.util.collection.Pair;
@@ -14,11 +16,13 @@ import org.caleydo.datadomain.pathway.graph.item.vertex.PathwayVertexRep;
 public class NodeElement extends GLElement {
 	
 	private PathwayVertexRep vertexRep;
-	private double disparity;
+//	private double displacement;
+	ArrayList<Pair<Short, Short>> coordinates;
 
 	public NodeElement(PathwayVertexRep vertexRep) {
 		
 		this.vertexRep = vertexRep;
+		this.coordinates = vertexRep.getCoords();
 		
 		setVisibility(EVisibility.PICKABLE);
 		
@@ -45,8 +49,9 @@ public class NodeElement extends GLElement {
 		
 		//vertexRep.getCoords().get(0).getFirst() is the upper left coordinate
 		
-		short x = vertexRep.getCoords().get(0).getFirst();
-		short y = vertexRep.getCoords().get(0).getSecond();
+		
+		short x = coordinates.get(0).getFirst();
+		short y = coordinates.get(0).getSecond();
 		short width = vertexRep.getWidth();
 		short height = vertexRep.getHeight();
 		
@@ -58,6 +63,22 @@ public class NodeElement extends GLElement {
 	@Override
 	protected void renderPickImpl(GLGraphics g, float w, float h) {
 		renderImpl(g, w, h);
+	}
+	
+	public PathwayVertexRep getVertex() {
+		return vertexRep;
+	}
+	
+	public ArrayList<Pair<Short, Short>> getCoords() {
+		return coordinates;
+	}
+	
+	public void setCoords(short centerX, short centerY, short width, short height) {
+		coordinates.add(new Pair<Short, Short>((short) (centerX - width / 2), (short) (centerY - height / 2)));
+		coordinates.add(new Pair<Short, Short>((short) (centerX + width / 2), (short) (centerY - height / 2)));
+		coordinates.add(new Pair<Short, Short>((short) (centerX + width / 2), (short) (centerY + height / 2)));
+		coordinates.add(new Pair<Short, Short>((short) (centerX - width / 2), (short) (centerY + height / 2)));
+		
 	}
 
 }
